<!--
  ~ Copyright 2016 the Cook-E development team
  ~
  ~ This file is part of Cook-E.
  ~
  ~ Cook-E is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Cook-E is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Cook-E.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  User interface strings should be in sentence case, not tile case
  https://www.google.com/design/spec/style/writing.html#writing-capitalization-punctuation
  -->

<resources>
    <string name="app_name">Cook-E</string>

    <string name="recipe_image_description">Recipe image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_recipes">Add recipes</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_image">Recipe image</string>
    <string name="recipe_description">Recipe description</string>
    <string name="step_title">Step title</string>
    <string name="delete">Delete</string>
    <string name="ingredient">Ingredient</string>
    <string name="action">Action</string>
    <string name="amount">Amount</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="create_recipe">Create recipe</string>
    <string name="select_image">Select image</string>
    <string name="label_continue">Continue</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="about_heading" translatable="false">Cook-E %1$s (%2$d)</string>
    <string name="about_details" translatable="false"><![CDATA[
Cook-E is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\n

Cook-E is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.\n\n

You should have received a copy of the GNU General Public License
along with Cook-E.  If not, see <http://www.gnu.org/licenses/>.\n\n

Cook-E uses the following Free Software libraries:\n\n

Joda-Time:\n\n

This product includes software developed by
Joda.org (http://www.joda.org/).\n\n

Joda-Time is distributed in accordance with the Apache license, version 2.0.\n\n

Evo Inflector:\n\n

Evo Inflector (https://github.com/atteo/evo-inflector/) is distributed in accordance with the Apache license, version 2.0.\n\n

Material icons:\n\n

This application uses the material icons developed by Google (https://design.google.com/icons/ ). The icons are distributed in accordance with the Creative Commons Attribution 4.0 International license (https://creativecommons.org/licenses/by/4.0/ ).\n\n

jTDS:\n\n

jTDS (http://jtds.sourceforge.net/ ) is distributed in accordance with the GNU Lesser General Public License.
]]></string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="step_list_title">Step %d</string>
    <string name="start">Start</string>
    <string name="search">Search</string>
    <string name="add_image">Add image</string>
    <string name="remove_image">Remove image</string>
    <string name="author">Author</string>
    <string name="time">Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="edit_step">Edit step</string>
    <string name="delete_step">Delete step</string>
    <string name="step">Step</string>
    <string name="add_step">Add step</string>
    <string name="edit_title_or_author">Edit title or author</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="question_delete_recipe">Delete recipe?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="create_meal">Create meal</string>
    <string name="delete_meal">Delete meal</string>
    <string name="question_delete_meal">Delete meal?</string>
    <string name="no_recipes">No recipes</string>
    <string name="no_items">No items</string>
    <string name="no_meals">No meals</string>
    <string name="done">Done</string>
    <string name="dialog_title_waiting_for_step">Waiting for a step</string>
    <string name="dialog_waiting_for_step">A step is still in progress. Finish the step to proceed.</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="describe_the_problem">Describe the problem</string>
    <string name="send">Send</string>
    <string name="mail_report">Mail report</string>
    <string name="could_not_access_image">Could not access image</string>
    <string name="could_not_access_image_explanation">Please ensure that the selected image is valid and accessible.</string>
    <string name="ok">OK</string>
    <string name="meal_completed">Meal Completed</string>
    <string name="reset">Reset</string>
    <string name="reset_durations">Reset durations</string>
    <string name="success_durations_reset">Durations reset</string>
    <string name="question_reset_durations">Reset durations?</string>
    <string name="failed_to_reset_durations">Failed to reset durations</string>
    <string name="explanation_reset_durations">Resetting durations will delete what Cook-E has learned about how long you take to cook.</string>
    <string name="format_ingredients">Ingredients: %s</string>
    <string name="format_description">Description: %s</string>
</resources>
